# bxr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  design.md  package.json
.github/workflows/: quality.yml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-30.jsonl  turns-2026-04-30.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
crates/bxr-bench/: Cargo.toml
crates/bxr-bench/src/: main.rs
crates/bxr-boot/: Cargo.toml
crates/bxr-boot/src/: lib.rs
crates/bxr-core/: Cargo.toml
crates/bxr-core/src/: lib.rs
crates/bxr-core/tests/: direct_boot_smoke.rs  guest_corpus.rs
crates/bxr-devices/: Cargo.toml
crates/bxr-devices/src/: lib.rs
crates/bxr-memory/: Cargo.toml
crates/bxr-memory/src/: lib.rs
crates/bxr-snapshot/: Cargo.toml
crates/bxr-snapshot/src/: lib.rs
crates/bxr-wasm/: Cargo.toml
crates/bxr-wasm/src/: lib.rs
crates/bxr-x86/: Cargo.toml
crates/bxr-x86/src/: execute.rs  flags.rs  lib.rs  mmu.rs  registers.rs  system.rs  width.rs
crates/bxr-x86/src/decode/: mod.rs
docs/: architecture.md  browser-x86-64-machine-runtime-design.md  first-20-task-status.md  research-observability.md  roadmap.md  world-class-criteria.md
docs/specs/: machine-profile-v1.md  snapshot-format-v1.md  worker-protocol-v1.md
scripts/: build-wasm.mjs  quality-gate.mjs  wasm-smoke.mjs
tests/guest-programs/: serial-wasm.hex
web/: index.html  server.mjs
web/src/: machine.worker.js  main.js  styles.css
